Pull request #112: WDZO-1463: Add mechanics in creating and updating client app
Squashed commit of the following:

commit 83392636abcabe51c366032171016c663aacfc15
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Wed Jan 27 14:37:14 2021 +0300

    WDZO-1463: Add require mechanics for clientApp

commit f5aba912303b26f802fb83c397082274db0c9505
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Wed Jan 27 10:50:17 2021 +0300

    WDZO-1463: Fix naming

commit 5c5197a9e7dff1604e03d23de7659fdecb7b2b47
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Wed Jan 27 08:35:33 2021 +0300

    WDZO-1463: Add mechanics in creating and updating client app

--- a/src/containers/ClientAppPage/ClientAppPage.module.css
+++ b/src/containers/ClientAppPage/ClientAppPage.module.css
@@ -46,6 +46,10 @@
     padding: 40px 40px 80px 40px;
 }
 
+.checkboxes{
+    display: flex;
+}
+
 .modalForm .crossSvg {
     position: absolute;
     top: 10px;
@@ -94,6 +98,12 @@
     position: absolute;
     bottom: 35px;
     padding: 5px 30px;
+}
+
+.mechanics_title {
+    color: #046732;
+    font-weight: bold;
+    margin-top: 5px;
 }
 
 .error {
