Pull request #111: WDZO-1326: added modal for PromoCodes(Upload and Statistics)
Squashed commit of the following:

commit f9d2da9e1ae7941f6e80e3cfb5eee1f1bd83eca7
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Wed Jan 27 14:00:53 2021 +0300

    WDZO-1326: changed duration in Notice

commit cccf89f95bfa9ee51686e703304d2ca65325e502
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Tue Jan 26 18:23:07 2021 +0300

    WDZO-1326: added modal for PromoCodes(Upload and Statistics)

--- a/src/containers/PromoCampaignPage/RedesignedPromoCampaignPage/PromoCampaign/PromoCampaignList/PromoCampaignListItem/PromoCampaignItemMenu/PromoCampaignItemMenu.module.css
+++ b/src/containers/PromoCampaignPage/RedesignedPromoCampaignPage/PromoCampaign/PromoCampaignList/PromoCampaignListItem/PromoCampaignItemMenu/PromoCampaignItemMenu.module.css
@@ -25,6 +25,9 @@
 
 .dropdownMenu :global(.ant-menu-item a:hover),
 .dropdownMenu :global(.ant-menu-item:hover),
+.dropdownMenu :global(.ant-menu-item-selected){
+    color:#09a552;
+}
 .menuItem:hover {
     color: #09a552;
 }
