Pull request #113: WDZO-883: Add alternativeOfferMechanic parametr to info and creating promo campaign
Squashed commit of the following:

commit 04939911e41e5f0b2a25475d94e1a8d722772767
Merge: 7671bfe f8efd0a
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Wed Jan 27 15:34:31 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-883

commit 7671bfe6803bc8ea31dac7a79e2d0b5ee8e71bfe
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Wed Jan 27 13:47:04 2021 +0300

    WDZO-883: Add alternativeOfferMechanic parametr to info and creating promo campaign

--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/PromoCampaignInfo.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/PromoCampaignInfo.module.css
@@ -103,3 +103,7 @@
     background-color: #dd283b;
     border-color: #dd283b;
 }
+
+.containerStep :global(.ant-switch-checked) {
+    background-color: #09a552;
+}
