Pull request #114: WDZO-1472: add confirm for delete promo-campaign
Squashed commit of the following:

commit 9fb25b6e4a4cb972f412f08c576d949a56dc0703
Merge: ea6ee88 0aeaeae
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Jan 28 12:18:33 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1472

commit ea6ee88cbc469dc36314072c1e22f9a0bca23421
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Jan 28 12:16:32 2021 +0300

    WDZO-1472: refactoring

commit 2e52c795069018fda5ffd6d1c174e455614a8650
Merge: 60fdf9f c24a654
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Jan 28 10:04:14 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1472

commit 60fdf9f1d09c46e2fa91dfe2b51b9def2798118c
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Jan 28 09:55:29 2021 +0300

    WDZO-1472: add confirm for delete promo-campaign

--- a/src/index.css
+++ b/src/index.css
@@ -19,11 +19,21 @@ body, ul, li, p {
 .ant-btn-primary:focus {
     background-color: #09a552 !important;
     border-color: #09a552 !important;
+    color: #ffffff !important;
+}
+
+.ant-btn:hover,
+.ant-btn:focus {
+    border-color: #09a552 !important;
+    color: #09a552;
 }
 
 .ant-btn-danger,
 .ant-btn-danger:hover,
-.ant-btn-danger:focus {
+.ant-btn-danger:focus,
+.ant-btn-dangerous.ant-btn-primary,
+.ant-btn-dangerous.ant-btn-primary:hover,
+.ant-btn-dangerous.ant-btn-primary:focus {
     background-color: #dd283b !important;
     border-color: #dd283b !important;
 }
