--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/PromoCampaignInfo.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/PromoCampaignInfo.module.css
@@ -38,7 +38,7 @@
 }
 
 .containerStep {
-    padding: 0 15px;
+    padding: 15px;
 }
 
 .container {
@@ -92,16 +92,6 @@
 
 .buttonGroup button:not(:last-child) {
     margin-right: 15px;
-}
-
-.promoContainer :global(.ant-btn-primary) {
-    background-color: #09a552;
-    border-color: #09a552;
-}
-
-.deleteBtn:global(.ant-btn-primary) {
-    background-color: #dd283b;
-    border-color: #dd283b;
 }
 
 .containerStep :global(.ant-switch-checked) {
