Pull request #117: WDZO-1474: add tooltip for url label in promo-campaign and dzo page
Squashed commit of the following:

commit 86c4377a6dc3ef01b918d04d95dd291a852a1dd5
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Jan 28 12:05:08 2021 +0300

    WDZO-1474: add tooltip for url label in promo-campaign and dzo page

--- a/src/components/LabelWithTooltip/LabelWithTooltip.module.css
+++ b/src/components/LabelWithTooltip/LabelWithTooltip.module.css
@@ -8,6 +8,10 @@
     align-items: center;
 }
 
+.tooltip.text {
+    max-width: 500px;
+}
+
 .tooltip :global(.ant-tooltip-inner) {
     background-color: white;
 }
@@ -20,7 +24,7 @@
 
 .tooltip :global(.ant-tooltip-arrow) {
     width: 21px;
-    height: 21px;
+    height: 19px;
 }
 
 .tooltipIcon {
@@ -35,4 +39,10 @@
 
 .tooltipImg {
     width: 100%;
+}
+
+.tooltipText {
+    color: rgba(0, 0, 0, 0.85);
+    font-size: 13px;
+    line-height: 18px;
 }
