--- a/src/containers/UsersPage/UserPage/UsersList/UsersList.module.css
+++ b/src/containers/UsersPage/UserPage/UsersList/UsersList.module.css
@@ -18,7 +18,7 @@
     color: #333f48;
     font-size: 16px;
     font-weight: bold;
-    margin-right: 5px;
+    margin-right: 30px;
 }
 
 .inputSearch {
@@ -50,7 +50,11 @@
 
 .downloadButtons {
     display: flex;
-    margin-right: 15px;
+    margin-right: 25px;
+}
+
+.downloadButtons > button:not(:last-child) {
+    margin-right: 12px;
 }
 
 .passwordColumn {
