Pull request #130: WDZO-1388: Redesign DzoPage
Squashed commit of the following:

commit 911cc1a774239a4b9575b3c33bbb4fe6bc5792bc
Merge: 6ae4ae9 5464c7e
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Tue Feb 9 13:45:26 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1388

commit 6ae4ae941b95052db3f015494b685b925b912cab
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Tue Feb 9 13:44:26 2021 +0300

    WDZO-1388: added common constants file

commit d69b41e86173f57cf5ef0f26e5123b74faf3ae5a
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Mon Feb 8 18:20:25 2021 +0300

    WDZO-1388: refactored dzoList filter and sort functions

commit 7e66747c47fcca77d0d05120ceb512b051720ed4
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Mon Feb 8 18:03:35 2021 +0300

    WDZO-1388: Improved interactions when adding, editing and removing an app for DZO and bug fix

commit ec99555512155e132d8da117c9923354112a573a
Merge: 74584ae e2f86da
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Mon Feb 8 16:24:37 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1388

commit 74584aec9b4dec421f4df0f62b005b286598f9e1
Merge: cdd773e 38e4a12
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Feb 4 08:28:33 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1388

commit cdd773ea4148c0d475cfc3d1c939e84f81a82722
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Wed Feb 3 16:05:10 2021 +0300

    WDZO-1388: added filter and sort in DzoPage, changed styles in dzoForm, dzoInfo

commit 763254087a0e6bd2862a1ed6614d5f056e7f5f80
Merge: 610777a c4c2fa4
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Wed Feb 3 14:30:37 2021 +0300

    Merge branch 'feature/WDZO-1388' of https://sbtatlas.sigma.sbrf

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,13 @@ body, ul, li, p {
     background-color: #dd283b !important;
     border-color: #dd283b !important;
 }
+.ant-input-clear-icon > svg{
+    fill: transparent;
+    width: 20px;
+    height: 20px;
+    background: url(./static/images/cross.svg);
+    margin-bottom: 3px;
+}
 
 /*.ant-btn-ghost,*/
 /*.ant-btn-ghost:hover,*/
