Pull request #134: Feature/WDZO-1518: Add redesign for client apps pages
Squashed commit of the following:

commit 248fcaf0f50244cc3a14f948e030b17bcbe3190c
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Tue Feb 9 17:53:38 2021 +0300

    WDZO-1518: fix owner routes

commit 77ba86ff775794a8e99567397f05d1853b4e16e8
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Tue Feb 9 17:27:55 2021 +0300

    WDZO-1518: hide for owner create and edit clientApps, refactoring sort functions for DZO and ClientApps pages

commit 0a3e9742f2aa71e0ca88cece3253749ff13dfb50
Merge: bf34dac a6ab818
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Tue Feb 9 14:15:33 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1518

commit bf34dacbaf5a36befa4bf6c6545dd5f394b8bef6
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Tue Feb 9 09:10:26 2021 +0300

    WDZO-1518: fixed sort & filter fns

commit 77565dfa3d6a4b3236ea6c9959442eb871dee45b
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Feb 5 14:42:03 2021 +0300

    WDZO-1518: refactoring

commit 916c6e9d0e3138a90aa74bb44aa74e8261f4c0cd
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Feb 5 12:12:52 2021 +0300

    WDZO-1518: refactoring code and styles

commit 503ff6c6edae081f8908d1cd78f8ce259a3a3f42
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Fri Feb 5 11:44:50 2021 +0300

    WDZO-1518: Style and validation fix

commit ed5842839cc3d2c68bca6a549c1bb71cc5a393d5
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Fri Feb 5 08:19:08 2021 +0300

    WDZO-1518: Rework add ClientApp and edit ClientApp

commit d8ae02690e8f520e99294bbed20869f032c0df3c
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Fri Feb 5 08:13:21 2021 +0300

    WDZO-1518: routes reworks

commit 2bc2921dc6d4c25413bb10de842e06a5a7804bd4
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Thu Feb 4 15:01:21 2021 +0300

    WDZO-

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -50,6 +50,15 @@
     margin-right: 10px;
 }
 
+.menu :global(.ant-menu-inline) .appLink.firstApp {
+    margin-top: 15px !important;
+}
+
+.appLink .menu__item {
+    padding-left: 30px;
+    color: #757575;
+}
+
 body:not(:global(.not_highlight_app)) .activeApp,
 .active {
     color: #09a552 !important;
@@ -96,7 +105,11 @@ body:not(:global(.not_highlight_app)) .activeApp,
 
 .menu :global(.ant-menu-item-selected) {
     color: #09A552 !important;
-    background-color: #F8F8F8 !important;
+    background-color: transparent !important;
+}
+
+.menu :global(.ant-menu-item-selected) a {
+    color: rgba(0, 0, 0, 0.85);
 }
 
 .menu :global(.ant-menu-item:hover) {
