--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/Steps/Templates/Template.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/Steps/Templates/Template.module.css
@@ -6,7 +6,7 @@
     position: relative;
     height: 180px;
     overflow: hidden;
-    background-color: #d4d9de;
+    background-color: #e9e9e9;
 }
 
 .col {
