Pull request #141: WDZO-1558: Add user login validation and login_types parameter when creating or editing app
Squashed commit of the following:

commit 1ef3d61e04423ce3dede918886e4c2c77e61c2ed
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Fri Feb 12 15:33:41 2021 +0300

    WDZO-1558: Add login_types parameter when creating or editing app

commit 1cac9014ee8eed6834238c29a050b37e148d3530
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Thu Feb 11 11:37:18 2021 +0300

    WDZO-1558: add size user login 8 or 13 characters

--- a/src/containers/ClientAppPage/ClientAppForm/ClientAppForm.module.css
+++ b/src/containers/ClientAppPage/ClientAppForm/ClientAppForm.module.css
@@ -49,9 +49,16 @@
     max-width: 800px;
 }
 
+.propertiesRow:not(:nth-last-child(2)) {
+    align-items: flex-end;
+}
+
 .propertiesRow {
     max-width: 950px;
-    align-items: flex-end;
+}
+
+.checkboxColumn {
+    flex-direction: column;
 }
 
 .colFlex :global(.ant-checkbox-group) {
@@ -64,13 +71,6 @@
 
 .colFlex :global(input:placeholder-shown ~ span) {
     display: none;
-}
-
-.colFlex :global(.ant-checkbox-input:hover + .ant-checkbox-inner),
-.colFlex :global(textarea.ant-input:hover),
-.colFlex :global(textarea.ant-input:focus) {
-    border-color: #09a552;
-    box-shadow: 0 0 0 1px rgba(141, 220, 183, 0.2);
 }
 
 .colFlex :global(.ant-checkbox-checked .ant-checkbox-inner) {
@@ -89,14 +89,12 @@
 
 .colFlex :global(.ant-input-affix-wrapper:hover),
 .colFlex :global(.ant-input-affix-wrapper:focus),
-.colFlex :global(.ant-input-affix-wrapper-focused) {
+.colFlex :global(.ant-input-affix-wrapper-focused),
+.colFlex :global(.ant-checkbox-input:hover + .ant-checkbox-inner),
+.colFlex :global(textarea.ant-input:hover),
+.colFlex :global(textarea.ant-input:focus) {
     border-color: #09a552;
     box-shadow: 0 0 0 1px rgba(141, 220, 183, 0.2);
-}
-
-.cross {
-    cursor: pointer;
-    height: 22px;
 }
 
 .infoText {
@@ -126,4 +124,8 @@
 
 .labelBold > div > label {
     font-weight: bold;
+}
+
+.labelBold > div > label::before {
+    content: none !important;
 }
