Pull request #144: WDZO-1551: add promo-campaign visibility by modal
Squashed commit of the following:

commit 578af3adba447617c868ed341eef6093bc64bcde
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Wed Feb 17 13:56:49 2021 +0300

    WDZO-1551: change loading state name, switch CHOSEN const to explicit text, remove lines

commit 80559de9e0bb16f4f0bc7d97183c16c78da1ac85
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Wed Feb 17 11:16:28 2021 +0300

    WDZO-1551: add promo-campaign visibility by modal

--- a/src/components/Form/AutocompleteLocationAndSalePoint/AutocompleteLocationAndSalePoint.module.css
+++ b/src/components/Form/AutocompleteLocationAndSalePoint/AutocompleteLocationAndSalePoint.module.css
@@ -12,6 +12,10 @@
     flex-basis: 37.5%;
 }
 
+.salePointColumn {
+    margin-top: 20px;
+}
+
 .formLabel {
     min-width: 120px;
     margin-bottom: 8px;
@@ -21,6 +25,10 @@
     width: 100%;
     min-width: 240px;
     max-width: 300px;
+}
+
+.autocompleteInputColumn {
+    max-width: none;
 }
 
 .autocompleteInput :global(.ant-input-affix-wrapper:hover),
@@ -99,6 +107,10 @@ div.autocompleteDropdown :global(.ant-select-item) {
 
 .inputWrapper {
     margin-right: 10px;
+}
+
+.inputWrapperColumn {
+    margin-right: 0;
 }
 
 .hasError :global(.ant-input-affix-wrapper) {
