Pull request #145: WDZO-1352: add save button for promoCampaingForm
Squashed commit of the following:

commit d4de0d87d603e634471881a8d32475eeae8e05a3
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Fri Feb 19 14:35:21 2021 +0300

    WDZO-1352: fix style

commit 493eacfa4233bc090199cfeb35ddf107e98542d6
Merge: efcf15b c3e9184
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Fri Feb 19 14:06:10 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1352

commit efcf15b063ba0cdb9e625772d5378c66d3d8b90d
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Feb 19 09:27:13 2021 +0300

    WDZO-1352: added copy promo-capmaign to other app

commit 1b42adf92a16e5a607499335500fc65f196c1fdd
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Feb 18 10:14:19 2021 +0300

    WDZO-1352: fix text in comments

commit b2d0bc18c7ce461fad3ca9c88a13cc6950c956af
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Feb 18 09:03:17 2021 +0300

    WDZO-1352: some fixes and refactoring. change comments in code

commit 23e27ab0a0e1d29d5df507e1ef45ecebb534613c
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Wed Feb 17 18:08:06 2021 +0300

    WDZO-1352: some refactoring. add 'indent' rule for eslint

commit fe437cbc02f0b45e14a2aa294cfe351daa67d5cb
Merge: f25923d 4e15ce9
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Wed Feb 17 14:58:08 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1352

commit f25923dd130285c2a53d7898abdba0395cfa7d3f
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Wed Feb 17 14:45:29 2021 +0300

    WDZO-1352: refactoring styles

commit 5296780a9d5c0f97ac7f43d81825b2e00ce9864a
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Wed Feb 17 14:21:53 2021 +0300

    WDZO-1352: refactor code and add comments

commit b3f9e529619c579e0dc26ac1a325769bc

--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignForm/PromoCampaignForm.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignForm/PromoCampaignForm.module.css
@@ -8,10 +8,18 @@
 }
 
 .containerControl {
+    position: sticky;
+    top: 63px;
+    z-index: 1;
+    background-color: #ffffff;
     width: 100%;
-    padding: 20px 15px 15px;
+    padding: 15px;
     margin-bottom: 15px;
     border-bottom: 2px solid #e5e8eb;
+}
+
+.containerControl.noMargin {
+    margin-bottom: 0;
 }
 
 .headerTitle {
@@ -36,16 +44,21 @@
     color: tomato;
 }
 
-.btnCancel:hover,
-.btnCancel:active,
-.btnCancel:focus {
-    color: #09a552 !important;
-    border-color: #09a552 !important;
+.loadingWrapper {
+    width: 100%;
+    position: absolute;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
-.wrapper :global(.ant-btn-primary) {
-    background: #09a552 !important;
-    border-color: #09a552 !important;
+.loading {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: 50%;
+    top: 0;
+    height: 100%;
 }
 
 .wrapper :global(.ant-input:hover),
@@ -65,42 +78,11 @@
     box-shadow: none;
 }
 
-.wrapper :global(.ant-picker-range .ant-picker-active-bar) {
-    background: #09a552;
-    border-color: #09a552;
-    box-shadow: none;
+.containerStep {
+    padding: 0 15px;
 }
 
-.wrapper :global(.ant-radio-inner::after) {
-    background-color: #09a552;
-}
-
-.wrapper :global(.ant-radio-checked::after) {
-    border-color: #09a552;
-}
-.wrapper :global(.ant-radio-checked .ant-radio-inner) {
-    border-color: #09a552;
-}
-
-.wrapper :global(.ant-radio:hover),
-.wrapper :global(.ant-radio-inner) {
-    border-color:#09a552;
-}
-
-.wrapper :global(.ant-picker-focused),
-.wrapper :global(.ant-picker:hover),
-.wrapper :global(.ant-picker-focused:focus),
-.wrapper :global(.ant-picker-focused:hover) {
-    border-color: #09a552;
-    box-shadow: none;
-}
-
-.wrapper :global(.ant-btn:hover) {
-    border-color: #09a552;
-    box-shadow: none;
-}
-
-.wrapper :global(.ant-btn:focus) {
-    border-color: #09a552;
-    box-shadow: none;
+.containerStep :global(.ant-form-item-label) {
+    text-align: left;
+    overflow: visible;
 }
