--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignForm/PromoCampaignSteps/StepInfo/StepInfo.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignForm/PromoCampaignSteps/StepInfo/StepInfo.module.css
@@ -1,7 +1,3 @@
-.containerStep {
-    padding: 0 15px;
-}
-
 .container {
     background-color: #f8f8f8;
     padding: 25px;
@@ -50,6 +46,21 @@
     border-color: #09a552;
 }
 
+.select :global(.ant-select-selector) {
+    flex-wrap: nowrap;
+    overflow: hidden;
+    background-color: transparent;
+    border: none;
+    width: 100%;
+}
+
+.select :global(.ant-select-arrow) {
+    position: static;
+    margin-top: 0;
+    width: auto;
+    height: auto;
+}
+
 .suffixBlock {
     display: flex;
     height: 100%;
@@ -67,38 +78,8 @@
     align-items: center;
 }
 
-.select :global(.ant-select-selector) {
-    flex-wrap: nowrap;
-    overflow: hidden;
-    background-color: transparent;
-    border: none;
-    width: 100%;
-}
-
-.select :global(.ant-select-arrow) {
-    position: static;
-    margin-top: 0;
-    width: auto;
-    height: auto;
-}
-
 .dropdown {
     background-color: transparent !important;
-}
-
-.dropdown :global(.ant-checkbox-indeterminate .ant-checkbox-inner::after) {
-    background-color: #09a552;
-}
-
-.dropdown :global(.ant-checkbox-checked .ant-checkbox-inner) {
-    background-color: #09a552 !important;
-    border-color: #09a552 !important;
-}
-
-.dropdown :global(.ant-checkbox-input:hover + .ant-checkbox-inner),
-.dropdown :global(.ant-checkbox-input:focus + .ant-checkbox-inner),
-.dropdown :global(.ant-checkbox-input:active + .ant-checkbox-inner) {
-    border-color: #09a552 !important;
 }
 
 .dropdown :global(.ant-select-item-option-state) {
@@ -143,14 +124,11 @@
 }
 
 .infoDetail {
-    margin: 10px 0;
+    margin-top: 15px;
+    padding-bottom: 15px;
 }
 
-.checkbox {
-    margin: 10px 0 !important;
-}
-
-.mrb {
+.checkbox:not(:last-child) {
     margin-bottom: 10px;
 }
 
@@ -169,13 +147,4 @@
     justify-content: space-between;
     width: 80%;
     max-width: 250px;
-}
-
-.containerStep :global(.ant-form-item-label) {
-    text-align: left;
-    overflow: visible;
-}
-
-.containerStep :global(.ant-switch-checked) {
-    background-color: #09a552;
 }
