Pull request #147: WDZO-1371: changing the visibility of multiple visibility settings
Squashed commit of the following:

commit 3d2d51f93c8a7d3f1416ba9afbbf4dfa76abae14
Merge: 57d8d86 2cd733e
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Feb 25 11:21:50 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1371

commit 57d8d864be2a95ad40e5481cdbd75f0300cf6cbf
Merge: 5ed011c 6b88ab0
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Fri Feb 19 17:26:04 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1371

commit 5ed011c480a70d323156e3ebe4fcc8f417cd023a
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Fri Feb 19 17:16:17 2021 +0300

    WDZO-1371: add new request to change visibility settings

commit 897935246a60d8eef7d88c5080624d0712a46d77
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Mon Feb 15 16:58:31 2021 +0300

    WDZO-1371: add changes visible setting selected promo-campaigns

--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignVisibilitySetting/PromoCampaignVisibilitySetting.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignVisibilitySetting/PromoCampaignVisibilitySetting.module.css
@@ -15,6 +15,10 @@
     font-weight: bold;
 }
 
+.checked > button {
+    margin-left: 10px;
+}
+
 .footer {
     position: sticky;
     bottom: 0;
@@ -24,11 +28,6 @@
     margin-top: auto;
     padding: 20px 15px;
     background-color: white;
-}
-
-button.redBtn {
-    background:	#dc283a !important;
-    border-color: #dc283a !important;
 }
 
 .nextSettingsTrigger {
