--- a/src/containers/PresentationPage/PresentationPage.module.css
+++ b/src/containers/PresentationPage/PresentationPage.module.css
@@ -27,16 +27,6 @@
     margin-bottom: 30px;
 }
 
-.landingPageWrapper .loadingLabel {
-    position: relative;
-}
-
-.landingPageWrapper .loadingLabel:after {
-    position: absolute;
-    content: '';
-    animation: dots 1.6s infinite;
-}
-
 .modalForm {
     position: relative;
     padding: 40px 40px 80px 40px;
@@ -83,20 +73,6 @@
     border-radius: 4px;
     background-color: #f7f7f7;
 }
-
-
-@keyframes dots {
-    0% { content: '' }
-    25% { content: '.' }
-    50% { content: '..' }
-    75% { content: '...' }
-    100% { content: '' }
-}
-
-
-
-
-
 
 .container {
     position: relative;
@@ -160,4 +136,30 @@
     margin-top: 10px;
     color: #f6650a;
     font-family: Roboto, sans-serif;
+}
+
+.emptyMessage {
+    transition: background-color 0.4s;
+    cursor: pointer;
+    padding: 20px;
+    color: rgba(0, 0, 0, 0.25);
+    background-color: #ffffff;
+}
+
+.emptyMessage:hover {
+    background-color: #f8f8f8;
+}
+
+.loadingContainer {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.loading {
+    position: fixed;
+    left: calc(50% + 150px);
+    top: 50%;
 }
