Pull request #162: WDZO-1618: Add bundle constructor
Squashed commit of the following:

commit 9a96a4cf74819cfae147fb20fb47220d0b2accf9
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Mar 11 11:23:14 2021 +0300

    WDZO-1618: fix text in constants

commit e8a972b69c6d837e66f1dd0cf19a55af4f3b85ba
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Thu Mar 11 10:56:30 2021 +0300

    WDZO-1618: fix bundle texts and settings

commit 4329c03752c35a8c5d5eaaec3655a5c789f8d2ce
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Wed Mar 10 16:33:11 2021 +0300

    WDZO-1618: refactoring bundle form, change image labels in bundle, add validate fileSize in UploadPicture

commit 1d43ce539e446602f728ccf11aee9386662c562c
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Tue Mar 9 14:41:19 2021 +0300

    WDZO-1618: fix relatedForm style, fix bugs in bundleForm

commit 18f34333257fe0c28f784920c746951843524071
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Tue Mar 9 13:56:55 2021 +0300

    WDZO-1618: refactoring BundleForm, BundleInfo, fix file check size and type in UploadFile

commit bee232dd1f4ae78759f306f381577e40fa450b96
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Tue Mar 9 12:00:19 2021 +0300

    WDZO-1618: add bundle enums, code refactoring

commit cbeaa74b1ca3d9a996702ee0291d2c078b1d89f0
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Fri Mar 5 16:15:03 2021 +0300

    WDZO-1618: refactoring SelectTags

commit d2e4dff37b87b73a682a9954726eac2d031487a1
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Fri Mar 5 15:44:11 2021 +0300

    WDZO-1618: add bundle info page

commit feefffd097d427971d0dd1fe100cbe0a556061a6
Author: OUT-Tretyakov-BI <BITretiyakov@sberbank.ru>
Date:   Thu Mar 4 16:44:38 2021 +0300

    WDZO-1618: delete duplicate functions

commit 19fa13e5aacd11aae477715492610ec6e2996090
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Mar 4 16:43:19 2021 +0300

    WDZO-16

--- a/src/components/DropdownWithAction/DropdownWithAction.module.css
+++ b/src/components/DropdownWithAction/DropdownWithAction.module.css
@@ -10,15 +10,18 @@ button.dropdownButton {
     align-items: center;
 }
 
-button.dropdownButton:hover,
-button.dropdownButton:focus {
-    color: #000;
-    border-color: #21ba72;
+button.dropdownButton svg {
+    transition: transform 0.3s;
+}
+
+button.dropdownButton:global(.ant-dropdown-open) svg {
+    transform: rotate(-180deg);
 }
 
 .dropdownMenuItem {
     padding: 10px;
     cursor: pointer;
+    transition: color 0.2s;
 }
 
 .dropdownMenuItem:hover {
