--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignVisibilitySetting/PromoCampaignVisibilitySetting.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignVisibilitySetting/PromoCampaignVisibilitySetting.module.css
@@ -26,13 +26,7 @@
     justify-content: space-between;
     align-items: center;
     margin-top: auto;
-    padding: 20px 15px;
-    background-color: white;
-}
-
-.nextSettingsTrigger {
-    position: absolute;
-    bottom: 300px;
-    height: 0;
-    width: 100%;
+    padding: 20px;
+    background-color: #ffffff;
+    min-height: 72px;
 }
