Pull request #169: WDZO-1660: reverse topRight positioned  notifications,  clean notifications on LoginPage mount
Squashed commit of the following:

commit d8084c293cfb7960a07babf9eb55e125bdc7c893
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Thu Mar 11 17:47:28 2021 +0300

    WDZO-1660: reverse topRight positioned  notifications,  clean notifications on LoginPage mount

--- a/src/index.css
+++ b/src/index.css
@@ -163,6 +163,11 @@ input.ant-input:placeholder-shown ~ span {
     display: none !important;
 }
 
+.ant-notification.ant-notification-topRight > div {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
 /*.ant-btn-ghost,*/
 /*.ant-btn-ghost:hover,*/
 /*.ant-btn-ghost:focus {*/
