Pull request #170: WDZO-1618: change name for standalone key in promo-campaign form
Squashed commit of the following:

commit 310f11c75bfc55523636db3d2a343343367d1f0c
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Tue Mar 16 08:16:20 2021 +0300

    WDZO-1618: name fixes

commit 6efe2339413aaa09beadc9f23a8b61611fe5e430
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Mon Mar 15 12:07:10 2021 +0300

    WDZO-1618: change name for standalone key in promo-campaign form
    some fixes and refactor

--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/PromoCampaignInfo.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/PromoCampaignInfo.module.css
@@ -73,6 +73,21 @@
     margin-bottom: 10px;
 }
 
+.switchContainer {
+    max-width: 280px;
+    display: flex;
+    align-items: flex-start;
+}
+
+.switch {
+    display: flex;
+    align-items: center;
+}
+
+.switch > button {
+    align-self: center;
+}
+
 .status {
     display: inline-block;
     padding: 5px 16px;
@@ -82,7 +97,7 @@
     text-align: center;
 }
 
-.redStatus {
+.danger {
     background-color: #fff1f0;
     color: #dc283a;
 }
