Pull request #175: WDZO-1684: add, edit dzo banner and refactor dzo constants
Squashed commit of the following:

commit 0aba0838084398a0d0f6b0ff3c00c2ab0ccaff6b
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Fri Mar 19 09:30:55 2021 +0300

    WDZO-1684: change dzo banner constants

commit 459f98aa57433b0b51e8d1a8386dd952a9a81bab
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Thu Mar 18 17:56:14 2021 +0300

    WDZO-1684: refactor dzo constants and DzoForm

commit a582f943fc49736c3c6cfe451a9503af8a081d3f
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Thu Mar 18 16:27:22 2021 +0300

    WDZO-1684: style fixes and refactoring

commit a5d8af51795d58ec57e31129a4d09eb670ed05ac
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Thu Mar 18 12:19:58 2021 +0300

    WDZO-1684: add and edit dzo banner

--- a/src/containers/DzoPage/DzoInfo/DzoInfo.module.css
+++ b/src/containers/DzoPage/DzoInfo/DzoInfo.module.css
@@ -21,7 +21,7 @@
 }
 
 .title {
-    margin-bottom: 10px;
+    margin-bottom: 6px;
 }
 
 .dzoTitle {
@@ -35,8 +35,26 @@
 
 .text {
     font-weight: 600;
+    word-wrap: break-word;
+    white-space: pre-line;
 }
 
 .footer {
     margin-bottom: 25px;
+}
+
+.bannersRow {
+    padding: 26px 0 46px;
+}
+
+.infoTitle {
+    margin-bottom: 6px;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 26px;
+    letter-spacing: -0.3px;
+}
+
+.dzoInfoRow {
+    margin-bottom: 26px;
 }
