--- a/src/containers/DzoPage/DzoForm/DzoForm.module.css
+++ b/src/containers/DzoPage/DzoForm/DzoForm.module.css
@@ -43,7 +43,7 @@
 }
 
 .btnGroup {
-    margin-top: 24px;
+    margin: 24px 0 24px;
 }
 
 .btnGroup > button {
@@ -56,29 +56,6 @@
 
 .cross {
     cursor: pointer;
-}
-
-.container :global(.ant-btn-primary) {
-    background: #09a552 !important;
-    border-color: #09a552 !important;
-}
-
-.container :global(.ant-input:hover),
-.container :global(.ant-input:active),
-.container :global(.ant-input:focus),
-.container :global(.ant-input-affix-wrapper:hover),
-.container :global(.ant-input-affix-wrapper:active),
-.container :global(.ant-input-affix-wrapper:focus),
-.container :global(.ant-input-affix-wrapper-focused),
-.container :global(.ant-btn:hover),
-.container :global(.ant-btn:focus),
-.container :global(.ant-select:not(.ant-select-disabled):hover .ant-select-selector),
-.container :global(.ant-select-focused:not(.ant-select-disabled).ant-select-single:not(.ant-select-customize-input) .ant-select-selector),
-.container :global(.ant-select-focused:not(.ant-select-disabled).ant-select-multiple .ant-select-selector),
-.container :global(.ant-select:active .ant-select-selector),
-.container :global(.ant-select:focus .ant-select-selector) {
-    border-color: #09a552;
-    box-shadow: none;
 }
 
 .container :global(.ant-select-item-option-selected:not(.ant-select-item-option-disabled)){
