Pull request #177: WDZO-1665: add tempPassword in userInfo
Squashed commit of the following:

commit 4bb38eec7f5cefb89fda51caa980ac1375fa76ba
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Mon Mar 22 16:34:27 2021 +0300

    delete cn in userForm

commit a6bf32ecdc8a1281a11ee1b029ea9caa276e77b2
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Mon Mar 22 14:14:27 2021 +0300

    WDZO-1665: fix bug in add userForm

commit 09bc393f776751c81e4c0cca1b66344fd929810a
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Mon Mar 22 12:03:14 2021 +0300

    WDZO-1665: add tempPassword in userInfo

--- a/src/containers/UsersPage/UserPage/UserForm.module.css
+++ b/src/containers/UsersPage/UserPage/UserForm.module.css
@@ -127,3 +127,11 @@
 .copyable :global(.ant-typography-copy) {
     color: #09a552;
 }
+
+.status {
+    padding: 5px 16px;
+    background-color: rgba(9, 165, 82, 0.08);
+    color: #09a552;
+    margin-left: 15px;
+    border-radius: 25px;
+}
